# fastapi-boilerplate

./: docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  main.py
app/auth/: service.py
app/auth/repository/: repository.py
app/auth/router/: router_update_user.py  router_user.py  router_user_avatar.py  router_user_favorites.py
app/pdf/: service.py
app/pdf/adapters/: here_service.py  s3_service.py
app/pdf/repository/: repository.py
app/pdf/router/: router_pdf.py
app/shanyraks/: service.py
app/shanyraks/adapters/: s3_service.py
app/shanyraks/repository/: repository.py  repository_comments.py
app/shanyraks/router/: router_comments.py  router_create_comment.py  router_create_shanyrak.py  router_delete.py  router_delete_comment.py  router_files.py  router_get_comments.py  router_get_shanyrak.py  router_shanyraks.py  router_update_comment.py  router_update_shanyrak.py  router_upload_file.py
app/youtube/: service.py
app/youtube/repository/: repository.py
app/youtube/router/: router_youtube.py
