[tool.poetry]
name = "fastapi-application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
pydantic= {extras = ["email"], version = "^1.10.4"}
fastapi = "^0.95.2"
uvicorn= {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.6"
pymongo = {extras = ["srv"], version = "^4.3.3"}
orjson = "^3.9.1"
boto3 = "^1.26.153"
requests = "^2.31.0"
psycopg2-binary = "^2.9.6"
langchain = "^0.0.247"
pypdf = "^3.14.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
unstructured = "^0.8.7"
tabulate = "^0.9.0"
pytesseract = "^0.3.10"
pycryptodome = "^3.18.0"
youtube-transcript-api = "^0.6.1"
deep-translator = "^1.11.4"
reportlab = "^4.0.4"


[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.7"
ruff = "^0.0.271"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
